<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_employer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.trustinno.win.jobagtrustinno.Employer.Employer"
    tools:showIn="@layout/app_bar_employer">



    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/employer_jobupload_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/reg_text"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>


            <EditText
                android:id="@+id/employer_cpname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/companyname_employer"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/employer_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:text="@string/prompt_email"/>


            <EditText
                android:id="@+id/employer_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/description"/>


            <EditText
                android:id="@+id/employer_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_position"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textStyle="bold"
                />


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_1"
                android:paddingTop="15dp"
                android:entries="@array/occupation_array"
                android:prompt="@string/occupation_prompt"
                android:maxLines="1"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_3"
                android:paddingTop="15dp"
                android:entries="@array/employer_price_array"
                android:prompt="@string/employer_price_prompt"
                android:maxLines="1"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/spinner_2"
                android:entries="@array/employer_jobtype_array"
                android:prompt="@string/employer_jobtype_prompt"
                android:paddingTop="20dp"
                android:maxLines="1"/>


            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/logtext_co"
                android:text="@string/up_text"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
